--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,11 @@ jobs:
         run: uv run --group dev mypy app
 
       - name: Tests
-        run: uv run --group dev pytest -q --cov=app --cov-report=term-missing
+        run: uv run --group dev pytest -q --cov=app --cov-report=term-missing --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        if: ${{ secrets.CODECOV_TOKEN != '' }}
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
